Bug 94733 - left-handed setting does not work for top software-button
Summary: left-handed setting does not work for top software-button
Status: RESOLVED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: libinput (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL: https://bugzilla.gnome.org/show_bug.c...
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-03-29 01:05 UTC by Peter Hutterer
Modified: 2016-04-04 01:41 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Peter Hutterer 2016-03-29 01:05:45 UTC
From https://bugzilla.gnome.org/show_bug.cgi?id=764209

left-handed doesn't work for the top software buttons, quick code check suggests the left-handed setting is applied in tp_post_clickpadbutton_buttons, then passed to the normal evdev code in tp_notify_clickpadbutton, then applied again (and thus reversed) in evdev_process_key
Comment 1 Peter Hutterer 2016-04-04 01:41:41 UTC
commit 1ecf6d7a607c5f481eb9b3b6365d7b55a0f18c53
Author: Peter Hutterer <peter.hutterer@who-t.net>
Date:   Wed Mar 30 15:31:07 2016 +1000

    touchpad: fix left-handed top software trackpoint buttons


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.